--- a/author.html
+++ b/author.html
@@ -2,6 +2,14 @@
 <html>
  <head>
     <title>Web Application Assignment </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
  </head>
 <body>
 
@@ -14,7 +22,7 @@
     <label for="guessAuthor">Guess the Author </label>
     <input type ="text" id="guessAuthor" name="guessAuthor" autofocus> <br>
 
-    <input type="button" onclick="checkAuthor()" value="Check the guess">
+    <input type="button" class="btn btn-info" onclick="checkAuthor()" value="Check the guess">
 </form>
 <p id="result"> Results: Good - <span id="goodCount">0</span>, Oops - <span id="oopsCount">0</span></p>
 
@@ -40,6 +48,32 @@ function checkAuthor (){
     }
 }
 </script>
-
+<div>
+<img id="imagenames" src="./losAngeles.jpeg" alt="Image of Los Angeles" width="100" height="100" onclick="selectImage()">
+</div>
+<script>
+let useImage = 1;
+        function selectImage() {
+            var image = document.getElementById("imagenames");
+            switch (useImage) {
+                case 1: {
+                    image.src = "udaipur.jpeg";
+                    useImage = 2;
+                    break;
+                }
+                case 2: {
+                    image.src = "losAngeles.jpeg";
+                    useImage = 3;
+                    break;
+                }
+                case 3: {
+                    image.src = "amsterdam.jpeg";
+                    useImage = 1;
+                    break;
+                }
+            }
+        }
+</script>
 </body>
 </html> 
+
