updated author.html document

--- a/tips.html
+++ b/tips.html
@@ -88,7 +88,7 @@ switch (operation) {
 document.getElementById("radioResult").innerHTML = outPut;
 }
 function tips(){
-console.log("fdffd")
+console.log("jlklkl")
 let base_Amount = parseFloat(document.getElementById("base_Amount").value);
 let tip_Percent = parseFloat( document.getElementById("tip_Percent").value);
 let myOutput = "";
