--- a/author.html
+++ b/author.html
@@ -17,10 +17,10 @@
         height: 100px;
         cursor: pointer;
     }      
-        .container{
-        width: 90%;
-        margin: 0px auto;
-    }
+    .container{
+            width: 50%;
+           margin-left: 20px;
+        }
     </style>
  </head>
 <body>
